[package]
name = "rust-turbo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["tokio"] }
byteorder = "1.5.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["client", "client-legacy", "http1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
